--- a/css/index.css
+++ b/css/index.css
@@ -38,28 +38,29 @@ p {
   justify-content: space-between;
   height: 10rem;
   padding: 0 1rem;
-  border-bottom: 1px solid #e0e2e6;
+  border-bottom: 1px solid #d7dbdf;
   user-select: none;
   background: white;
-  transition: border 0.2s ease; }
+  transition: border 0.2s ease;
+  font-size: 1.5rem; }
   .header__logo-nav {
     display: flex;
     align-items: center; }
   .header__logo {
-    font-size: 1.4rem;
+    font-size: 1em;
     display: flex;
     align-items: center; }
   .header__nav {
-    margin-left: 4rem;
+    margin-left: 2.5em;
     height: 100%;
     display: flex;
     align-items: center; }
     .header__nav > a + a {
-      margin-left: 3rem; }
+      margin-left: 2em; }
     .header__nav a {
-      font-size: 1.4rem;
+      font-size: 1.1em;
       text-decoration: none;
-      color: #68707d;
+      color: #687076;
       height: inherit;
       display: flex;
       align-items: center;
@@ -69,16 +70,15 @@ p {
         position: absolute;
         inset: 0; }
       .header__nav a:hover {
-        color: #1d2025; }
+        color: #00254d; }
       .header__nav a:hover:after {
-        border-bottom: 3px solid #ff7d1a; }
+        border-bottom: 3px solid #f76808; }
   .header__usermenu {
     display: flex;
-    align-items: center;
-    font-size: 1rem; }
+    align-items: center; }
     .header__usermenu--cart {
-      width: 4em;
-      height: 4em;
+      width: 5em;
+      height: 5em;
       background: url("../images/icon-cart.svg") no-repeat center;
       border: none;
       margin-right: 1.5em;
@@ -88,11 +88,11 @@ p {
         position: absolute;
         right: 1em;
         top: 1em;
-        font-size: 0.7em;
+        font-size: 0.9em;
         padding: 0.1em 0.6em;
         font-weight: bold;
         border-radius: 40%;
-        background-color: #ff7d1a;
+        background-color: #f76808;
         color: white; }
         @media screen and (max-width: 768px) {
           .header__usermenu--cart .count {
@@ -114,7 +114,7 @@ p {
         width: 100%;
         object-fit: fill; }
       .header__usermenu--avatar:active {
-        border: 2px solid #ff7d1a; }
+        border: 2px solid #f76808; }
       @media screen and (max-width: 768px) {
         .header__usermenu--avatar {
           width: 2.2em;
@@ -158,9 +158,8 @@ main {
   z-index: 20;
   max-width: 20rem;
   transform: translateX(-100%);
-  transition: transform 100ms ease-out;
-  padding: 1.2rem;
-  visibility: hidden; }
+  transition: transform 300ms ease-out;
+  padding: 1.2rem; }
   .sidebar .close-btn {
     padding: 1rem;
     background: none;
@@ -176,18 +175,17 @@ main {
       font-weight: bold;
       padding: 0 1rem; }
     .sidebar__navlist-item + .sidebar__navlist-item {
-      margin-top: .9rem; }
+      margin-top: 0.9rem; }
     .sidebar__navlist a {
-      color: #1d2025;
+      color: #00254d;
       text-decoration: none;
       padding: 1rem 0; }
 
 .sidebar.active {
-  visibility: visible;
   transform: translateX(0%); }
 
 .sidebar.active + .sidebar_scrim {
-  background-color: rgba(0, 0, 0, 0.32);
+  background-color: #171717;
   display: block; }
 
 .sidebar_scrim {
@@ -205,7 +203,7 @@ main {
   border-radius: 0.5em;
   text-align: center;
   cursor: pointer;
-  background-color: #ff7d1a;
+  background-color: #f76808;
   color: white;
   padding: 0.2em 3em;
   height: 50px;
@@ -221,7 +219,7 @@ main {
   .btn svg path {
     fill: currentColor; }
   .btn:hover {
-    background: #ff9a4d;
+    background: #f98639;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075), 0 2px 2px rgba(0, 0, 0, 0.075), 0 4px 4px rgba(0, 0, 0, 0.075), 0 8px 8px rgba(0, 0, 0, 0.075), 0 16px 16px rgba(0, 0, 0, 0.075); }
   .btn:hover:active {
     box-shadow: none; }
@@ -285,9 +283,9 @@ main {
     padding: 0.5rem;
     z-index: 1; }
     .lightbox .close-btn svg path {
-      fill: #f7f8fd; }
+      fill: #d7dbdf; }
     .lightbox .close-btn:hover > svg path {
-      fill: #ff7d1a; }
+      fill: #f76808; }
   .lightbox .stage {
     position: relative;
     background: none;
@@ -304,14 +302,14 @@ main {
       width: 4rem;
       height: 4rem;
       padding: 1rem;
-      background: #f7f8fd;
+      background: #d7dbdf;
       border: 2px solid transparent;
       border-radius: 50%;
       box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075), 0 2px 2px rgba(0, 0, 0, 0.075), 0 4px 4px rgba(0, 0, 0, 0.075), 0 8px 8px rgba(0, 0, 0, 0.075);
-      color: #ff7d1a;
+      color: #f76808;
       cursor: pointer; }
       .lightbox .stage--previous:hover > svg path, .lightbox .stage--next:hover > svg path {
-        stroke: #ff7d1a; }
+        stroke: #f76808; }
     .lightbox .stage--previous {
       top: 49%;
       left: 0;
@@ -343,11 +341,13 @@ main {
         inset: 0;
         border-radius: inherit; }
     .lightbox .altimages .item.active {
-      border: 2px solid #ff7d1a; }
+      border: 4px solid #ed5f00; }
     .lightbox .altimages .item.active .overlay {
-      background: rgba(255, 255, 255, 0.411); }
+      background: #8f8f8f;
+      opacity: 0.5; }
     .lightbox .altimages .item:hover .overlay {
-      background: rgba(255, 255, 255, 0.589); }
+      background: #c7c7c7;
+      opacity: 0.5; }
 
 .cost__info {
   display: flex;
@@ -369,12 +369,12 @@ main {
     margin-top: 0.3em;
     margin-left: 0.7em;
     border-radius: 0.2em;
-    color: #ff7d1a;
-    background-color: #ffede0; }
+    color: #f76808;
+    background-color: #ffe8d7; }
   .cost__info .actual-price {
     font-size: 0.6em;
     text-decoration: line-through;
-    color: #68707d; }
+    color: #687076; }
     @media screen and (max-width: 640px) {
       .cost__info .actual-price {
         font-size: 0.8em; } }
@@ -382,24 +382,24 @@ main {
 .quant__adder {
   display: flex;
   align-items: center;
-  background-color: #f7f8fd;
+  background-color: #eceef0;
   font-size: 1rem;
-  border-radius: .5em;
+  border-radius: 0.5em;
   width: 100%;
   justify-content: space-between; }
   .quant__adder--minus, .quant__adder--plus {
-    border-radius: .5em;
+    border-radius: 0.5em;
     padding: 1.5em 1.3em;
     width: 1em;
     height: 1em;
     border: none;
-    color: #ff7d1a;
+    color: #f76808;
     font-weight: 400;
     cursor: pointer; }
     .quant__adder--minus:hover, .quant__adder--plus:hover {
-      background-color: #e0e2e6; }
+      background-color: #d7dbdf; }
     .quant__adder--minus:active, .quant__adder--plus:active {
-      background-color: #b6bcc8; }
+      background-color: #c1c8cd; }
   .quant__adder--minus {
     background: url("../images/icon-minus.svg") no-repeat center; }
   .quant__adder--plus {
@@ -434,14 +434,14 @@ main {
       width: 4em;
       height: 4em;
       padding: 1em;
-      background: #f7f8fd;
+      background: #d7dbdf;
       border: 2px solid transparent;
       border-radius: 50%;
       box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075), 0 2px 2px rgba(0, 0, 0, 0.075), 0 4px 4px rgba(0, 0, 0, 0.075), 0 8px 8px rgba(0, 0, 0, 0.075);
-      color: #ff7d1a;
+      color: #f76808;
       cursor: pointer; }
       .product__gallery .stage--previous:hover > svg path, .product__gallery .stage--next:hover > svg path {
-        stroke: #ff7d1a; }
+        stroke: #f76808; }
       @media screen and (min-width: 640px) {
         .product__gallery .stage--previous, .product__gallery .stage--next {
           display: none; } }
@@ -488,7 +488,7 @@ main {
       object-fit: fill;
       border-radius: 1em; }
   .product__gallery .item.active {
-    border: 2px solid #ff7d1a; }
+    border: 4px solid #f76808; }
   .product__gallery .item.active img {
     opacity: 0.3; }
   .product__gallery .item:hover img {
@@ -506,12 +506,11 @@ main {
   @media screen and (max-width: 640px) {
     .cart-menu {
       width: 96%;
-      top: 10%;
-      right: 2%;
-      left: auto; } }
+      left: auto;
+      right: 2%; } }
   .cart-menu__header {
     padding: 1.3rem;
-    border-bottom: 1px solid #e0e2e6;
+    border-bottom: 1px solid #d7dbdf;
     font-size: 1.5em;
     font-weight: bold; }
   .cart-menu__body {
@@ -529,9 +528,9 @@ main {
       object-fit: fill;
       border-radius: 0.4em; }
   .cart-menu__empty {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     font-weight: bold;
-    color: #68707d; }
+    color: #687076; }
   .cart-menu__item {
     font-size: 1rem;
     padding: 1.2rem;
@@ -539,8 +538,8 @@ main {
     align-items: flex-start;
     justify-content: space-between; }
     .cart-menu__item__info {
-      font-size: 1.3rem;
-      color: #68707d;
+      font-size: 1.5rem;
+      color: #687076;
       flex-basis: 70%; }
       .cart-menu__item__info--name {
         padding-bottom: 0.5em; }
@@ -572,74 +571,75 @@ main {
     .product {
       font-size: 0.7rem;
       margin: 0 0 2rem; } }
-  .product .images {
+  .product__images {
     width: 45%;
     float: left;
     padding-right: 8em; }
     @media screen and (max-width: 1024px) {
-      .product .images {
+      .product__images {
         padding-right: 4em;
         width: 50%; } }
     @media screen and (max-width: 640px) {
-      .product .images {
+      .product__images {
         width: 100%;
         float: unset;
         display: block;
         padding: 0; } }
-  .product .details {
+  .product__details {
     width: calc(100% - 45% - 8em);
     float: left;
     display: flex;
     flex-direction: column;
     padding: 4em 0 2em; }
     @media screen and (max-width: 1024px) {
-      .product .details {
+      .product__details {
         width: calc(100% - 50% - 4em); } }
     @media screen and (max-width: 640px) {
-      .product .details {
+      .product__details {
         width: 100%;
         float: unset;
         display: block;
         padding: 1em; } }
-    .product .details__company {
-      color: #ff7d1a;
+    .product__details .manufacturer {
+      color: #f76808;
       letter-spacing: 0.2em;
       font-size: 1.3em;
       font-weight: bold;
       text-transform: uppercase; }
-    .product .details h2 {
+    .product__details h2 {
       font-size: 4em;
       margin-top: 1em; }
       @media screen and (max-width: 1024px) {
-        .product .details h2 {
+        .product__details h2 {
           font-size: 3.5em;
           margin-top: 0.8em; } }
       @media screen and (max-width: 640px) {
-        .product .details h2 {
+        .product__details h2 {
           font-size: 3em;
           margin-top: 0.5em; } }
-    .product .details p {
-      color: #68707d;
-      margin: 2em 0; }
+    .product__details p {
+      color: #687076;
+      margin: 2em 0;
+      font-size: 2em; }
       @media screen and (max-width: 640px) {
-        .product .details p {
+        .product__details p {
           margin: 1.5em 0 2em;
           font-size: 2em; } }
-    .product .details__addquant {
+    .product__details .adder {
       margin-top: 2em;
       display: flex;
       align-items: center; }
-      .product .details__addquant .container {
+      .product__details .adder__inner {
         flex-grow: 0; }
-      .product .details__addquant .container + .container {
+      .product__details .adder .adder__inner + .adder__inner {
         margin-left: 1em; }
       @media screen and (max-width: 1024px) {
-        .product .details__addquant {
+        .product__details .adder {
           flex-direction: column; }
-          .product .details__addquant .container {
+          .product__details .adder__inner {
             width: 100%;
             flex-grow: 1; }
-          .product .details__addquant .container + .container {
+          .product__details .adder .adder__inner + .adder__inner {
             margin-left: 0;
             margin-top: 2em; } }
   .product::after {
